Update canonical and Open Graph URLs in index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="Free online document tools: Convert text to PDF, clean word documents, format resumes, extract text from PDFs. No registration required. Works worldwide.">
     <meta name="keywords" content="document converter online, text to pdf, resume formatter, word cleaner, pdf extractor, free tools">
     <meta name="author" content="DocEase">
-    <link rel="canonical" href="https://yourdomain.com/">
+   <link rel="canonical" href="https://deepakrai845101-cell.github.io/Free-Language-Detection-and-Translation-Tool/">
     <meta property="og:title" content="DocEase – Free Document Converter & Resume Formatter">
     <meta property="og:description" content="Free online document tools for India, USA and worldwide users.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/">
-    <meta property="og:image" content="https://yourdomain.com/og-image.png">
+    <meta property="og:url" content="https://deepakrai845101-cell.github.io/Free-Language-Detection-and-Translation-Tool/">
+   <meta property="og:image" content="https://deepakrai845101-cell.github.io/Free-Language-Detection-and-Translation-Tool/og-image.png">
     <link rel="stylesheet" href="style.css">
     <script type="application/ld+json">
     {
@@ -21,7 +21,7 @@
         "@type": "WebApplication",
         "name": "DocEase",
         "description": "Free online document converter and resume formatter tools",
-        "url": "https://yourdomain.com/",
+       "url": "https://deepakrai845101-cell.github.io/Free-Language-Detection-and-Translation-Tool/",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Any",
         "offers": {
